# llm-thought-tracing

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: huggingface_example.py  patchscopes_example.py  qwen_example.py
llm_reasoning_tracer/: causal_intervention.py  concept_extraction.py  reasoning_analysis.py  visualization.py
ltr/: __init__.py  attention_analysis.py  concept_extraction.py  entity_analysis.py  logit_lens.py  patchscopes.py  reasoning_analysis.py  visualization.py
notebooks/: geographical_reasoning_notebook.ipynb  logical_reasoning_notebook.ipynb  mathematical_reasoning_notebook.ipynb
